# QS-Gen3.0

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/argue/: framework_debate.md  glassmorphism_framework_debate.md  glassmorphism_verification_result.md  gui_implementation_debate.md
docs/devlog/: 001-initial-gui-glassmorphism-issue.md  002-glassmorphism-deep-research.md  003-glassmorphism-research-results.md  004-windows-firewall-python-fix.md  005-tws-connection-troubleshooting.md  006-tws-timeout-research-report.md  007-tws-final-analysis.md  008-tws-connection-resolved.md  009-phase-0-2-summary.md  010-phase-3-control-interface.md  011-dashboard-integration.md  012-phase-4-analytics.md  013-github-initial-commit.md  014-step-5-1-market-data.md  015-step-5-3-tws-sync.md  016-phase-5-4-system-tray.md  017-phase-5-5-notifications-clean-exit.md  018-phase-6-1-dockerized-ib-gateway.md  019-phase-6-2-nautilus-gui-wip.md
docs/plan/: initial_report.md
scripts/: diagnose_tws.py  test_acrylic_full.py  test_frameless_acrylic.py  test_ibapi_direct.py  test_ibapi_v2.py  test_ibkr_connection.py  test_market_data.py  test_mica_ctypes.py  test_official_ibapi.py
src/: main.py
src/core/: __init__.py  ibkr_bridge.py  nautilus_bridge.py  trading_node.py
src/gui/: mainwindow.py
src/gui/dialogs/: __init__.py  order_entry.py
src/gui/widgets/: __init__.py  backtest_runner.py  connection_widget.py  live_chart.py  log_viewer.py  order_table.py  position_panel.py  strategy_control.py  tearsheet_viewer.py
