[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qs-gen3"
version = "0.1.0"
description = "Retail Quant Trading System based on Nautilus Trader"
authors = [
    { name = "User", email = "user@example.com" }
]
dependencies = [
    "nautilus_trader>=1.200.0",
    "PySide6>=6.6.0",
    "PySide6-Fluent-Widgets>=1.5.0",
    "pyqtgraph>=0.13.0",
    "qasync>=0.27.1",
    "numpy>=1.26.0",
    "pandas>=2.0.0"
]
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src"]
